<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.crm</groupId>
	<artifactId>portal</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>portal</name>

	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>http://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>4.3.2.RELEASE</spring.version>
		<shiro.version>1.3.0</shiro.version>
		<activiti.version>5.21.0</activiti.version> 
	</properties>

	<dependencies>
		<!-- spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-oxm</artifactId>
            <version>${spring.version}</version>
        </dependency>
		

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		<dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>

		<dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
        </dependency>
        
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- mybatis 包 -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis.generator</groupId>
			<artifactId>mybatis-generator-core</artifactId>
			<version>1.3.1</version>
		</dependency>

		<!--mybatis spring 插件 -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>1.3.0</version>
		</dependency>

		<!-- mysql连接 -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.39</version>
		</dependency>

		<!-- 数据源 -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.18</version>
		</dependency>

		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.8.9</version>
		</dependency>

		<!-- log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		
		<dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.21</version>
        </dependency>
        
        <dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		</dependency>

		<!-- servlet -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- json -->
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.12</version>
		</dependency>
		<dependency>
		    <groupId>net.sf.json-lib</groupId>
		    <artifactId>json-lib</artifactId>
		    <version>2.3</version>
		    <classifier>jdk15</classifier>
		</dependency> 
		<dependency>
		    <groupId>net.sf.jxls</groupId>
		    <artifactId>jxls-core</artifactId>
		    <version>1.0.6</version>
		</dependency>
		<dependency>
		    <groupId>net.sourceforge.jexcelapi</groupId>
		    <artifactId>jxl</artifactId>
		    <version>2.6.10</version>
		</dependency>



		<!-- 文件上传 -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.10</version>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.5</version>
        </dependency>
        <dependency>
		    <groupId>commons-beanutils</groupId>
		    <artifactId>commons-beanutils</artifactId>
		    <version>1.9.2</version>
		</dependency>
		<dependency>
		    <groupId>net.sf.ezmorph</groupId>
		    <artifactId>ezmorph</artifactId>
		    <version>1.0.6</version>
		</dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.2</version>
        </dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.4</version>
		</dependency>
		
		<!-- cglib -->
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib-nodep</artifactId>
            <version>3.2.4</version>
        </dependency>
        
        <!-- poi -->
        <dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>3.14</version>
		</dependency>
		<!-- pdf -->
		<dependency>
		    <groupId>com.artofsolving</groupId>
		    <artifactId>jodconverter</artifactId>
		    <version>2.2.1</version>
		</dependency>
        
        <!--Apache Shiro所需的jar包-->    
		<dependency>    
			<groupId>org.apache.shiro</groupId>    
			<artifactId>shiro-core</artifactId>    
			<version>${shiro.version}</version>    
		</dependency>    
		<dependency>    
			<groupId>org.apache.shiro</groupId>    
			<artifactId>shiro-web</artifactId>    
			<version>${shiro.version}</version>    
		</dependency>    
		<dependency>    
			<groupId>org.apache.shiro</groupId>    
			<artifactId>shiro-spring</artifactId>    
			<version>${shiro.version}</version>    
		</dependency>
		<dependency>  
		     <groupId>org.apache.shiro</groupId>  
		     <artifactId>shiro-quartz</artifactId>  
		     <version>1.2.2</version>  
		</dependency> 
		 <!-- activiti依赖 -->  
	    <dependency>  
	        <groupId>org.activiti</groupId>  
	        <artifactId>activiti-engine</artifactId>  
	        <version>${activiti.version}</version>  
	    </dependency>  
	    <!-- activiti 与 Spring 集成 -->  
	    <dependency>  
	        <groupId>org.activiti</groupId>  
	        <artifactId>activiti-spring</artifactId>  
	        <version>${activiti.version}</version>  
	    </dependency>
	    
	    <!-- 报表JfreeChart依赖的jar包 -->
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.19</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.23</version>
		</dependency>
		
		<!-- finereport -->
		<dependency>
			<groupId>fr</groupId>
			<artifactId>fr-server</artifactId>
			<version>7.1</version>
		</dependency>
		<dependency>
			<groupId>fr</groupId>
			<artifactId>fr-designer</artifactId>
			<version>7.1</version>
		</dependency>
		<dependency>
			<groupId>fr</groupId>
			<artifactId>fr-third</artifactId>
			<version>7.1</version>
		</dependency>
		<dependency>
	      <groupId>org.projectlombok</groupId>
	      <artifactId>lombok</artifactId>
	      <version>1.16.10</version>
	      <scope>provided</scope>
	    </dependency>
	    <dependency>
		    <groupId>com.sun.xml.stream</groupId>
		    <artifactId>sjsxp</artifactId>
		    <version>1.0.2</version>
		</dependency>
	    <dependency>
  			<groupId>org.springframework</groupId>
  			<artifactId>spring-mock</artifactId>
  			<version>2.0.8</version>
  		<scope>test</scope>
	  	</dependency>
	  	<dependency>    
			<groupId>org.mockito</groupId>    
			<artifactId>mockito-all</artifactId>    
			<version>1.8.5</version>    
			<scope>test</scope>    
		</dependency>
	</dependencies>

	<build>
		<finalName>portal</finalName>
		<plugins>
			<!-- maven编辑插件 -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<!-- 构建版本 -->
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.mybatis.generator</groupId>
			    <artifactId>mybatis-generator-maven-plugin</artifactId>
			    <version>1.3.0</version>
			    <configuration>
			    	<verbose>true</verbose>
			        <overwrite>true</overwrite>
			    </configuration>
			    <dependencies>
					<dependency>
						<groupId>mysql</groupId>
						<artifactId>mysql-connector-java</artifactId>
						<version>5.1.39</version>
					</dependency>
					<dependency>
						<groupId>org.mybatis.generator</groupId>
						<artifactId>mybatis-generator-core</artifactId>
						<version>1.3.1</version>
					</dependency>
					<dependency>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
						<version>1.2.17</version>
					</dependency>
	
				</dependencies>
			</plugin>
			<plugin>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>2.4.3</version>
		        <configuration>
		          <!-- testFailureIgnore: test ignore (default=false). true is temporary setting. -->
		          <testFailureIgnore>true</testFailureIgnore>
		          <excludes>
		            <exclude>**/Abstract*</exclude>
		            <exclude>**/*$*</exclude>
		            <exclude>**/Mock*.java</exclude>
		            <exclude>**/Base*.java</exclude>
		            <exclude>**/Test*.java</exclude>
		          </excludes>
		          <systemProperties>
		            <property>
		              <name>java.util.logging.config.file</name>
		              <value>${project.build.testOutputDirectory}/logging.test.properties</value>
		            </property>
		          </systemProperties>
		          <argLine>-server -Xmx512m -Xms256m -XX:MaxPermSize=128M</argLine>
		        </configuration>
		      </plugin>
			
		</plugins>
		
		 <!--配置Maven 对resource文件 过滤 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>
	</build>
</project>